<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="ST_ErrHist" Id="{db7a316e-8dc8-468e-9fec-4d8cbb016f9d}">
    <Declaration><![CDATA[TYPE ST_ErrHist :
STRUCT
	nErrId		: UDINT;
	sErrSource	: STRING(63);
	nErrCount	: UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>